--- a/synchronization.html
+++ b/synchronization.html
@@ -10,10 +10,9 @@
 
 <p>MyBible podržava sinhronizaciju između različitih uređaja istog korisnika.
 
-<!-- !!! Please translate the following paragraph -->
-<p>A set up data synchronization automatically means that you have in the cloud a backup copy
-    of your data entered or downloaded in MyBible - for cases like loss of a device,
-    accidental deletion of MyBible along with all its data, a glitch when installing a new version of MyBible.
+<p>Podešena sinhronizacija podataka automatski znači da u oblaku imate rezervnu kopiju
+    vaših podataka unetih ili preuzetih u MyBible - za slučajeve kao što je gubitak uređaja,
+    slučajno brisanje MyBible zajedno sa svim njenim podacima, greška prilikom instaliranja nove verzije MyBible.
 
 <h3>Princip sinhronizacije</h3>
 
