updated translate (9.feb.2020)

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
 
 <!-- !!! Please translate the link text; note that the linked privacy policy is in English -->
-<p><a href="https://mybible.zone/en/privacy">Privacy policy (English)</a>
+<p><a href="https://mybible.zone/en/privacy">Pravila o privatnosti (English)</a>
 
 <h2>Potrebna pomoć?</h2>
 
